<resources>
    <string name="app_name">Изобретая велосипед…</string>
    <string name="create_bike">Изобрести велосипед</string>
    <string name="start_bike_logo">Марка велосипеда: ______</string>
    <string name="bike_logo">Марка велосипеда: %s</string>
    <string name="start_frame_number">Номер рамы: ______</string>
    <string name="frame_number">Номер рамы: %s</string>
    <string name="start_wheel_number">Номер колеса: ______</string>
    <string name="wheel_number">Номер колеса: %s</string>
    <string name="start_frame_color">Цвет рамы: ______</string>
    <string name="frame_color">Цвет рамы: %s</string>
    <string name="btn_dagger">Dagger</string>
    <string name="btn_koin">Koin</string>
</resources>